Fix a deadlock in QMetaType.

QMetaType should unlock all mutexes guarding custom types data before
calling an user code.

Task-number: QTBUG-22930
Change-Id: I501d011d6cbd467d8f22402d668e84aa848061b8
Reviewed-by: Olivier Goffart <ogoffart@woboq.com>
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
Reviewed-by: Rohan McGovern <rohan.mcgovern@nokia.com>

cregit: fa7f690178d2f74db168a23064a688fe421cb1e6 https://github.com/qt/qtbase/commit/fa7f690178d2f74db168a23064a688fe421cb1e6